--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
     "extends": [
       "react-app",
       "react-app/jest"
