--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-refresh": "^0.11.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.14.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^12.3.0",
